# consulta-nfse-api

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: testar_conexao.py
src/consulta_nfse_api/: __init__.py  __main__.py  auth.py  cliente.py  config.py  download.py  excecoes.py  modelos.py  tracer.py
tests/: conftest.py  test_auth.py  test_dfe.py  test_excecoes.py  test_rate_limit.py
