[project]
name = "consulta-nfse-api"
version = "0.1.1"
description = "Cliente para download de XMLs da NFSe via API ADN Nacional com certificado A1"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
    { name = "DiegoAxiole" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "httpx>=0.28.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.15.0",
    "cryptography>=44.0.0",
]

[project.urls]
Homepage = "https://github.com/DiegoAxiole/consulta-nfse-api"
Source = "https://github.com/DiegoAxiole/consulta-nfse-api"
BugTracker = "https://github.com/DiegoAxiole/consulta-nfse-api/issues"

[project.scripts]
consulta-nfse-api = "consulta_nfse_api.__main__:app"

[build-system]
requires = ["uv_build>=0.11.17,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
